# MCP-Project

./: .env.example  .gitignore  DockerFile  README.md  client.py  mathematics_server.py  pyproject.toml  resume.txt  weather_server.py
data/: research.db
evals/: golden_dataset.py  graders.py  run_evals.py
evals/fixtures/: test_resume.txt
servers/: file_server.py  notes_server.py  search_server.py
