[project]
name = "MCP_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.0",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
]
